--- a/style.css
+++ b/style.css
@@ -76,5 +76,26 @@ li img{
 li p{
     margin-top: 5px;
     font-size: 18px;
-    text-align: center;
+    text-indent: 10px;
+}
+
+footer{
+    margin-top: 50px;
+    background-color: red;
+}
+h3{
+    font-size: 30px;
+}
+form{
+    background-color: gray;
+    height: 150px;
+}
+footer div{
+    background-color: yellow;
+    text-align: right;
+    padding-right:20px ;
+}
+footer img{
+    height: 30px;
+    margin-right: 5px;
 }
