--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@
 }
 .header-name-display span{
     font-size: 15px;
+    display: block;
     border-bottom: 1px solid black;
+    background-color: whitesmoke;
 }
 .header-links{
     margin-top: 20px;
@@ -28,15 +30,17 @@
 /* =======////main============ */
 
 .about-me-container{
+    height: 120px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 150px;
-    /* background-color: gray; */
+    background-color: whitesmoke;
+    border: 2px solid silver;
+    border-bottom: 0px;
 }
 
 h1{ 
-    padding: 5px;
+    padding:  25px 5px;
     margin-right: 15px;
     font-size: 20px;
     border-right:2px solid black ;
@@ -51,13 +55,14 @@ h1{
 h2{
     font-size: 30px;
     padding-bottom: 10px;
-    margin: 80px 30px 20px;
+    margin: 30px 30px 20px;
     text-align: center;
     border-bottom: 2px solid black;   
 }
 
 ol{
-    /* background-color: yellow; */
+    background-color: whitesmoke;
+    border: 2px solid gray;
     display: flex;
     justify-content: space-around;
     padding: 5px;
@@ -77,25 +82,98 @@ li p{
     margin-top: 5px;
     font-size: 18px;
     text-indent: 10px;
+    line-height: 1.3;
 }
 
 footer{
     margin-top: 50px;
-    background-color: red;
 }
 h3{
     font-size: 30px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+
+    border-bottom: 3px solid black;
 }
-form{
-    background-color: gray;
-    height: 150px;
+.form-bin{
+    width: 350px;
+    margin: auto;
+    padding: 5px;
+    margin-bottom: 30px;
+    background-color: whitesmoke;
+    border: 2px solid silver;
+    border-radius: 5px;
+}   
+   form{
+margin:20px 5px;
+   }
+
+.form-input-container{
+    padding: 5px;
+    display: flex;
+    
 }
-footer div{
-    background-color: yellow;
+form label {
+    width: 35%;
+    display: block;
+    margin-right: 20px;
+
+}
+form input{
+    background-color: white;
+    width: 100%;
+    padding: 8px;
+    border-radius: 5px;
+    border: none;
+}
+form button{
+    border: none;
+    padding: 5px 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.links-container{
     text-align: right;
     padding-right:20px ;
 }
-footer img{
-    height: 30px;
-    margin-right: 5px;
+.links-container a{
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* ===============//================== */
+.skill-sett-container{
+    padding: 5px;
+    padding-top: 30px;
+    background-color: whitesmoke;
+    border: 2px solid silver;
+    border-top: 0;
+}
+.skill-sett-container ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 350px;
+    margin: auto;
+    /* background-color: rebeccapurple; */
+}
+
+.skill-sett-container li{
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin-right: 2px;
+    margin-bottom: 8px;
+    background-color: white;
 }
