--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
-
+@import "./styles/lighting-slider.css";
 html{
 	box-sizing: border-box;
 	font-family: 'Ubuntu Mono', monospace, 'Segoe UI' ;
